--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 </style>
 <html lang="en-gb"><head>
   <meta charset="utf-8">
-  <title>My site</title>
+  <title>내 사이트</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,7 +36,7 @@
   
   <link rel="stylesheet" href="/css/syntax.min.css" integrity="" media="screen">
 
-  <link rel="alternate" type="application/rss+xml" href="https://wjdwlss.github.io/about/index.xml" title="My site" />
+  <link rel="alternate" type="application/rss+xml" href="https://wjdwlss.github.io/about/index.xml" title="내 사이트" />
 <script src="https://cdn.jsdelivr.net/npm/mailgo@0.9.14/dist/mailgo.min.js" defer></script>
 
   <!--Favicon-->
@@ -177,13 +177,13 @@
   <div class="uk-container">
     <div class="uk-flex-center" uk-grid>
       <div class="uk-width-1-2 uk-width-1-3@s">
-        <img src="https://wjdwlss.github.io/images/about/profile.jpg" alt="author">
+        <img src="https://wjdwlss.github.io" alt="author">
       </div>
       <div class="uk-width-expand@m">
-        <p>Hi! I&rsquo;m Sam, a second year Computer Science student from Durham University.
-I like doing personal projects, which you will find in the portfolio page of this website.
-My specialties can be found on the homepage, of which most are web development or cyber security.</p>
-<p>I am currently available for part time remote work, but will be looking for full time employment from summer 2021.</p>
+        <p>이름 : 김정진<br>
+나이 : 23<br>
+학교 : 한국항공대학교<br>
+학과 : 소프트웨어학과</p>
 
       </div>
     </div>
