--- a/portfolio/example-team-no-github/index.html
+++ b/portfolio/example-team-no-github/index.html
@@ -15,7 +15,7 @@
 </style>
 <html lang="en-gb"><head>
   <meta charset="utf-8">
-  <title>My site</title>
+  <title>내 사이트</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
